--- a/exp/Moh_experiment02.ipynb
+++ b/exp/Moh_experiment02.ipynb
@@ -13,7 +13,8 @@
         "  enabled: true\n",
         "lang: ja\n",
         "---"
-      ]
+      ],
+      "id": "bf9ccde9"
     },
     {
       "cell_type": "markdown",
@@ -41,17 +42,19 @@
         "(むむむ．．．)\n",
         "実験1で，密集したトレーニングデータからラベル無しデータを選んでいるのだから，ある意味空間特徴に基づいた高信頼なデータである．\n",
         "実験1で行うべきは，\\Omega - D_l　から全く無作為抽出された（実験2の「条件」のない）ラベルなしデータであるべきでは...\n"
-      ]
+      ],
+      "id": "7200ed12"
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "from indianpines.dataset import load as load_pines\n",
-        "from s3vm_pines.module import recategorize_csv, train_test_split, colored_map, labeled_unlabeled_test_split\n",
+        "from s3vm_pines.module import recategorize17to10_csv, train_test_split, colored_map, labeled_unlabeled_test_split\n",
         "\n",
-        "pines = load_pines(pca=20,recategorize_rule=recategorize_csv, include_background=True,gt_gic=False)"
+        "pines = load_pines(pca=20,recategorize_rule=recategorize17to10_csv, include_background=True,gt_gic=False)"
       ],
+      "id": "e128fec1",
       "execution_count": null,
       "outputs": []
     },
@@ -63,8 +66,9 @@
         "\n",
         "ここで，トレーニングデータは，無作為に選ばれたものではなく，ラベルごとに空間的に密集していることに注意されたい．これは土地被覆分類におけるアノテーションの特性を反映したものである．\n",
         "\n",
-        "トレーニングデータを @fig_train に示す．"
-      ]
+        "トレーニングデータを @fig_train に示す．\n"
+      ],
+      "id": "7809f27f"
     },
     {
       "cell_type": "code",
@@ -73,12 +77,13 @@
         "prop_train = 1348/10320\n",
         "print(prop_train)\n",
         "\n",
-        "status, status_name = train_test_split(prop_train=prop_train, recategorize_rule=recategorize_csv, gt_gic=False)\n",
+        "status, status_name = train_test_split(prop_train=prop_train, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
         "for i, s in enumerate(status_name):\n",
         "    n = status[status==i].shape[0]\n",
         "    print(f'{i}:{s}:{n}')"
       ],
+      "id": "130d1a8c",
       "execution_count": null,
       "outputs": []
     },
@@ -87,14 +92,15 @@
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
-      ]
+      ],
+      "id": "fde0bb99"
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_labeled\n",
-        "#| fig-cap: \"Testing with Various Labeled Data Proportion\"\n",
+        "#| fig-cap: Testing with Various Labeled Data Proportion\n",
         "#| output: false\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
@@ -118,11 +124,12 @@
         "fig2 = plt.figure()\n",
         "ax21 = [0 for _ in prop_train_l_list]\n",
         "for i, prop_train_l in enumerate(prop_train_l_list):\n",
-        "    l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status, features=pines.features, target=pines.target, cordinates=pines.cordinates, unlabeled_type = 'from_spatial',seed_l=seed_l, seed_u=seed_u)\n",
+        "    print('='*3 + f'{prop_train_l = }' + '='*3)\n",
+        "    l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status, unlabeled_type = 'from_spatialneighbor',seed_l=seed_l, seed_u=seed_u, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
-        "    for i, s in enumerate(l_u_t_status_name):\n",
-        "        n = l_u_t_status[l_u_t_status==i].shape[0]\n",
-        "        print(f'{i}:{s}:{n}')\n",
+        "    for j, s in enumerate(l_u_t_status_name):\n",
+        "        n = l_u_t_status[l_u_t_status==j].shape[0]\n",
+        "        print(f'{j}:{s}:{n}')\n",
         "\n",
         "    X_train_l = pines.features[l_u_t_status==3].tolist()\n",
         "    L_train_l = pines.target[l_u_t_status==3].tolist()\n",
@@ -130,8 +137,8 @@
         "    X_test = pines.features[l_u_t_status==1].tolist()\n",
         "    L_test = pines.target[l_u_t_status==1].tolist()\n",
         "\n",
-        "    ax21[i] = fig2.add_subplot(3,3,i)\n",
-        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize_csv, gt_gic=False)\n",
+        "    ax21[i] = fig2.add_subplot(3,3,i+1)\n",
+        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "    ax21[i].set_title(f'{prop_train_l =}')\n",
         "\n",
         "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0.8, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
@@ -148,8 +155,10 @@
         "ax22.plot(prop_train_l_list, acc)\n",
         "ax22.set_xlabel(r'Amount of Labeled Data [$\\%$]')\n",
         "ax22.set_ylabel(r'Accuracy Score[$\\%$]')\n",
-        "ax22.set_title('Testing with Various Labeled Data Proportion')"
+        "ax22.set_title('Testing with Various Labeled Data Proportion')\n",
+        "fig2.savefig(\"exp02_02.png\")"
       ],
+      "id": "fig_test_with_various_labeled",
       "execution_count": null,
       "outputs": []
     },
@@ -159,15 +168,16 @@
       "source": [
         "@fig_test_with_various_labeled に示すようにラベル付きデータがトレーニングデータの20%以上のときにエラー率が低くなるので，20％に固定する．\n",
         "\n",
-        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．"
-      ]
+        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．\n"
+      ],
+      "id": "3594db49"
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_unlabeled\n",
-        "#| fig-cap: \"Testing with Various Unlabeled Data Proportion\"\n",
+        "#| fig-cap: Testing with Various Unlabeled Data Proportion\n",
         "#| output: false\n",
         "\n",
         "import numpy as np\n",
@@ -178,7 +188,7 @@
         "seed_l = 83988848\n",
         "seed_u = 83988848\n",
         "\n",
-        "l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status,features=pines.features, target=pines.target, cordinates=pines.cordinates, unlabeled_type='from_spatial', seed_l=seed_l, seed_u=seed_u)\n",
+        "l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status, unlabeled_type='from_spatial', seed_l=seed_l, seed_u=seed_u, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
         "X_train_l = pines.features[l_u_t_status==3].tolist()\n",
         "L_train_l = pines.target[l_u_t_status==3].tolist()\n",
@@ -207,18 +217,19 @@
         "fig3 = plt.figure()\n",
         "ax31 = [0 for _ in prop_train_u_list]\n",
         "for i, prop_train_u in enumerate(prop_train_u_list):\n",
+        "    print('='*3 + f'{prop_train_u = }' + '='*3)\n",
         "    selected, selected_name = select_unlabeled_in_proportion(prop_train_u, l_u_t_status, status, target=pines.target)\n",
         "\n",
-        "    for i, s in enumerate(l_u_t_status_name):\n",
-        "        n = l_u_t_status[l_u_t_status==i].shape[0]\n",
-        "        if i == 2:\n",
+        "    for j, s in enumerate(l_u_t_status_name):\n",
+        "        n = l_u_t_status[l_u_t_status==j].shape[0]\n",
+        "        if j == 2:\n",
         "            n = selected[selected == 2].shape[0]\n",
-        "        print(f'{i}:{s}:{n}')\n",
+        "        print(f'{j}:{s}:{n}')\n",
         "\n",
         "    X_train_u = pines.features[selected==2].tolist()\n",
         "\n",
-        "    ax31[i] = fig3.add_subplot(3,3,i)\n",
-        "    colored_map(ax31[i], pines.target[selected==2], pines.cordinates[selected==2], recategorize_rule=recategorize_csv, gt_gic=False)\n",
+        "    ax31[i] = fig3.add_subplot(3,3,i+1)\n",
+        "    colored_map(ax31[i], pines.target[selected==2], pines.cordinates[selected==2], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "    ax31[i].set_title(f'{prop_train_u =}')\n",
         "\n",
         "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0.8, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
@@ -235,8 +246,10 @@
         "ax33.plot(prop_train_u_list, acc)\n",
         "ax33.set_xlabel(r'Amount of Unlabeled Data [%%]')\n",
         "ax33.set_ylabel(r'Accuracy Score [%%]')\n",
-        "ax33.set_title('Testing with Various Unlabeled Data Proportion')"
+        "ax33.set_title('Testing with Various Unlabeled Data Proportion')\n",
+        "fig3.savefig(\"exp02_03.png\")"
       ],
+      "id": "fig_test_with_various_unlabeled",
       "execution_count": null,
       "outputs": []
     }
@@ -249,5 +262,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 5
 }
