--- a/exp/Moh_experiment03.ipynb
+++ b/exp/Moh_experiment03.ipynb
@@ -13,7 +13,8 @@
         "  enabled: true\n",
         "lang: ja\n",
         "---"
-      ]
+      ],
+      "id": "1d6044ac"
     },
     {
       "cell_type": "markdown",
@@ -23,18 +24,20 @@
         "\n",
         "実験1と割合（サンプル数）は同様だが，抽出元が異なる．ラベル無しデータは無い．\n",
         "- ラベル付きデータの割合 p = 0.1*(0.1〜0.8) , D_l selected from D_0 (predefined training data: 10% of anotated)\n",
-        "- テストデータの割合 r = 0.9 , \\Omega - D_0"
-      ]
+        "- テストデータの割合 r = 0.9 , \\Omega - D_0\n"
+      ],
+      "id": "654e6f1c"
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "from indianpines.dataset import load as load_pines\n",
-        "from s3vm_pines.module import recategorize_csv, train_test_split, colored_map, labeled_unlabeled_test_split\n",
+        "from s3vm_pines.module import recategorize17to10_csv, train_test_split, colored_map, labeled_unlabeled_test_split\n",
         "\n",
-        "pines = load_pines(pca=20,recategorize_rule=recategorize_csv, include_background=True,gt_gic=False)"
+        "pines = load_pines(pca=20,recategorize_rule=recategorize17to10_csv, include_background=True,gt_gic=False)"
       ],
+      "id": "6e0df955",
       "execution_count": null,
       "outputs": []
     },
@@ -45,12 +48,13 @@
         "prop_train = 1348/10320\n",
         "print(prop_train)\n",
         "\n",
-        "status, status_name = train_test_split(prop_train=prop_train, recategorize_rule=recategorize_csv, gt_gic=False)\n",
+        "status, status_name = train_test_split(prop_train=prop_train, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
         "for i, s in enumerate(status_name):\n",
         "    n = status[status==i].shape[0]\n",
         "    print(f'{i}:{s}:{n}')"
       ],
+      "id": "8717bea4",
       "execution_count": null,
       "outputs": []
     },
@@ -59,14 +63,15 @@
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
-      ]
+      ],
+      "id": "1ec2f5a9"
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_labeled\n",
-        "#| fig-cap: \"Testing with Various Labeled Data Proportion\"\n",
+        "#| fig-cap: Testing with Various Labeled Data Proportion\n",
         "#| output: false\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
@@ -74,6 +79,7 @@
         "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
         "import random\n",
         "from matplotlib import style\n",
+        "from matplotlib import pyplot as plt\n",
         "style.use(['science','ieee'])\n",
         "\n",
         "\n",
@@ -93,11 +99,12 @@
         "fig2 = plt.figure()\n",
         "ax21 = [0 for _ in prop_train_l_list]\n",
         "for i, prop_train_l in enumerate(prop_train_l_list):\n",
-        "    l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status,features=pines.features, target=pines.target, cordinates=pines.cordinates, unlabeled_type = 'from_train',seed_l=seed_l, seed_u=seed_u)\n",
+        "    print('='*3 + f'{prop_train_l = }' + '='*3)\n",
+        "    l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status, unlabeled_type = 'from_train',seed_l=seed_l, seed_u=seed_u, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
-        "    for i, s in enumerate(l_u_t_status_name):\n",
-        "        n = l_u_t_status[l_u_t_status==i].shape[0]\n",
-        "        print(f'{i}:{s}:{n}')\n",
+        "    for j, s in enumerate(l_u_t_status_name):\n",
+        "        n = l_u_t_status[l_u_t_status==j].shape[0]\n",
+        "        print(f'{j}:{s}:{n}')\n",
         "\n",
         "    X_train_l = pines.features[l_u_t_status==3].tolist()\n",
         "    L_train_l = pines.target[l_u_t_status==3].tolist()\n",
@@ -105,11 +112,11 @@
         "    X_test = pines.features[l_u_t_status==1].tolist()\n",
         "    L_test = pines.target[l_u_t_status==1].tolist()\n",
         "\n",
-        "    ax21[i] = fig2.add_subplot(3,3,i)\n",
-        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize_csv, gt_gic=False)\n",
+        "    ax21[i] = fig2.add_subplot(3,3,i+1)\n",
+        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "    ax21[i].set_title(f'{prop_train_l =}')\n",
         "\n",
-        "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
+        "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=1e-7, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
         "    clf.train()\n",
         "    preds = clf.predict(X_test)\n",
         "    err_ = classification_error(preds,L_test)\n",
@@ -135,8 +142,10 @@
         "ax22.plot(prop_train_l_list, acc_svm, label='SVM')\n",
         "ax22.set_xlabel(r'Amount of Labeled Data [$\\%$]')\n",
         "ax22.set_ylabel(r'Accuracy Score[$\\%$]')\n",
-        "ax22.set_title('Testing with Various Labeled Data Proportion')"
+        "ax22.set_title('Testing with Various Labeled Data Proportion')\n",
+        "fig2.savefig(\"exp03_02.png\")"
       ],
+      "id": "fig_test_with_various_labeled",
       "execution_count": null,
       "outputs": []
     }
@@ -149,5 +158,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 5
 }
