--- a/exp/Moh_experiment01.ipynb
+++ b/exp/Moh_experiment01.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "raw",
-      "id": "ce5ad0ed",
+      "id": "e8435f5a",
       "metadata": {},
       "source": [
         "---\n",
@@ -19,8 +19,12 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "0ffd9f46",
-      "metadata": {},
+      "id": "376deb3e",
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "from indianpines.dataset import load as load_pines\n",
@@ -31,7 +35,7 @@
     },
     {
       "cell_type": "markdown",
-      "id": "38a0fe29",
+      "id": "af34d0a1",
       "metadata": {},
       "source": [
         "実験1では，Backgroundラベル10705インスタンスを除く10320インスタンスから，$10\\%$をトレーニングデータとして選び，それをラベル付きとラベル無しに分割する(p:1-p）．トレーニングデータ以外の$90\\%$を評価用のテストデータとする．\n",
@@ -44,8 +48,12 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "db9769d1",
-      "metadata": {},
+      "id": "168005b3",
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "prop_train = 1348/10320\n",
@@ -62,7 +70,11 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fig_train",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "#| label: fig_train\n",
@@ -73,13 +85,33 @@
         "fig = plt.figure()\n",
         "ax = fig.add_subplot(1,1,1)\n",
         "colored_map(ax, pines.target[status==2], pines.cordinates[status==2], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
-        "ax.set_title('training data')\n",
-        "fig.savefig(\"exp01_01.png\")"
+        "ax.set_title(f'training data {prop_train = }')\n",
+        "fig.tight_layout()\n",
+        "fig.savefig(\"exp01_fig01.png\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae356836",
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "def counter2hms(c):\n",
+        "    H = 60*60\n",
+        "    M = 60\n",
+        "    h, c = c//H, c%H\n",
+        "    m, s = c//M, c%M\n",
+        "    return int(h),int(m),int(s)"
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "f457b94d",
+      "id": "a3ace9ef",
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
@@ -89,12 +121,16 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fig_test_with_various_labeled",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "#| label: fig_test_with_various_labeled\n",
         "#| fig-cap: Testing with Various Labeled Data Proportion\n",
-        "#| output: false\n",
+        "#| output: true\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
         "from qns3vm.tools import classification_error\n",
@@ -102,7 +138,7 @@
         "import random\n",
         "from matplotlib import style\n",
         "style.use(['science','ieee'])\n",
-        "from time import sleep\n",
+        "from time import sleep, perf_counter\n",
         "\n",
         "rg = random.Random()\n",
         "\n",
@@ -114,48 +150,82 @@
         "acc = list()\n",
         "err = list()\n",
         "f1 = list()\n",
-        "fig2 = plt.figure()\n",
-        "ax21 = [0 for _ in prop_train_l_list]\n",
+        "fig2 = [0 for _ in prop_train_l_list]\n",
+        "ax2 = [0 for _ in prop_train_l_list] * 3\n",
+        "\n",
+        "t_start = perf_counter()\n",
+        "t_old = t_start\n",
         "for i, prop_train_l in enumerate(prop_train_l_list):\n",
         "    print('='*3 + f'{prop_train_l = }' + '='*3)\n",
         "    l_u_t_status, l_u_t_status_name = labeled_unlabeled_test_split(prop_train_l=prop_train_l,status=status,unlabeled_type = 'from_train',seed_l=seed_l, seed_u=seed_u, recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
         "\n",
         "    for j, s in enumerate(l_u_t_status_name):\n",
-        "        n = l_u_t_status[l_u_t_status==i].shape[0]\n",
+        "        n = l_u_t_status[l_u_t_status==j].shape[0]\n",
         "        print(f'{j}:{s}:{n}')\n",
         "\n",
         "    X_train_l = pines.features[l_u_t_status==3].tolist()\n",
         "    L_train_l = pines.target[l_u_t_status==3].tolist()\n",
         "    X_train_u = pines.features[l_u_t_status==2].tolist()\n",
+        "    L_train_u = pines.target[l_u_t_status==2].tolist()\n",
         "    X_test = pines.features[l_u_t_status==1].tolist()\n",
         "    L_test = pines.target[l_u_t_status==1].tolist()\n",
         "\n",
-        "    ax21[i] = fig2.add_subplot(3,3,i+1)\n",
-        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
-        "    ax21[i].set_title(f'{prop_train_l =}')\n",
-        "    sleep(5)\n",
+        "    fig2[i] = plt.figure(figsize=(12.8,19.2), constrained_layout=True)\n",
+        "    # labeled\n",
+        "    ax2[3*i+0] = fig2[i].add_subplot(4,2,1)\n",
+        "    colored_map(ax2[3*i+0], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax2[3*i+0].set_title(f'labeled area {prop_train_l =}')\n",
+        "    # unlabeled\n",
+        "    ax2[3*i+1] = fig2[i].add_subplot(4,2,3)\n",
+        "    colored_map(ax2[3*i+1], L_train_u, pines.cordinates[l_u_t_status==2], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax2[3*i+1].set_title(f'unlabeled area {prop_train_l =}')\n",
         "\n",
         "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0.8, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
         "    clf.train()\n",
+        "\n",
         "    preds = clf.predict(X_test)\n",
         "    err_ = classification_error(preds,L_test)\n",
         "    acc_ = accuracy_score(L_test, preds)\n",
         "    f1_ = f1_score(L_test, preds, average=\"micro\")\n",
+        "\n",
+        "    ax2[3*i+2] = fig2[i].add_subplot(2,1,2)\n",
+        "    colored_map(ax2[3*i+2], preds, pines.cordinates[l_u_t_status==1], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax2[3*i+2].set_title(f'predicted label for tested area {prop_train_l =}, {acc_ = }, {f1_ = }')\n",
+        "\n",
+        "    fig2[i].tight_layout(rect=[0,0,1,0.96])\n",
+        "    fig2name = f'exp01_fig02_{i:0d}.png'\n",
+        "    fig2[i].savefig(fig2name)\n",
+        "\n",
         "    err.append(err_)\n",
         "    acc.append(acc_)\n",
         "    f1.append(f1_)\n",
         "\n",
-        "ax22 = fig2.add_subplot(3,3,9)\n",
-        "ax22.plot(prop_train_l_list, acc)\n",
-        "ax22.set_xlabel(r'Amount of Labeled Data [$\\%$]')\n",
-        "ax22.set_ylabel(r'Accuracy Score[$\\%$]')\n",
-        "ax22.set_title('Testing with Various Labeled Data Proportion')\n",
-        "fig2.savefig(\"exp01_02.png\")"
+        "    # counter\n",
+        "    t_now = perf_counter()\n",
+        "    t_lap = t_now-t_old\n",
+        "    t_ave = (t_now-t_start)/(i+1)\n",
+        "    t_rest = t_ave * (len(prop_train_l_list)-(i+1))\n",
+        "    ho,mo,so = counter2hms(t_old)\n",
+        "    hl,ml,sl = counter2hms(t_lap)\n",
+        "    hr,mr,sr = counter2hms(t_rest)\n",
+        "    print(f'lap {i+1} | {hl:2d}:{ml:2d}:{sl:2d} + {ho:2d}:{mo:2d}:{so:2d}, est {hr:2d}:{mr:2d}:{sr:2d}')\n",
+        "    t_old = t_now\n",
+        "\n",
+        "fig3 = plt.figure()\n",
+        "ax3 = fig3.add_subplot(1,1,1)\n",
+        "ax3.plot(prop_train_l_list, acc, 'o', label='accuracy score')\n",
+        "ax3.plot(prop_train_l_list, f1, 's--', label='f1 score')\n",
+        "ax3.legend()\n",
+        "ax3.set_xlabel(r'Amount of Labeled Data [$\\%$]')\n",
+        "ax3.set_ylabel(r'Score[$\\%$]')\n",
+        "ax3.set_title('Testing with Various Labeled Data Proportion')\n",
+        "fig3.tight_layout(rect=[0,0,1,0.96])\n",
+        "fig3.savefig(\"exp01_fig03.png\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "90c72ce5",
+      "id": "915b795a",
       "metadata": {},
       "source": [
         "@fig_test_with_various_labeled に示すようにラベル付きデータがトレーニングデータの20%以上のときにエラー率が低くなるので，20％に固定する．\n",
@@ -167,12 +237,16 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fig_test_with_various_unlabeled",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
       "outputs": [],
       "source": [
         "#| label: fig_test_with_various_unlabeled\n",
         "#| fig-cap: Testing with Various Unlabeled Data Proportion\n",
-        "#| output: false\n",
+        "#| output: true\n",
         "\n",
         "import numpy as np\n",
         "\n",
@@ -208,8 +282,10 @@
         "acc = list()\n",
         "err = list()\n",
         "f1 = list()\n",
-        "fig3 = plt.figure()\n",
-        "ax31 = [0 for _ in prop_train_u_list]\n",
+        "fig4 = [0 for _ in prop_train_u_list]\n",
+        "ax4 = [0 for _ in prop_train_u_list] * 3\n",
+        "t_start = perf_counter()\n",
+        "t_old = t_start\n",
         "for i, prop_train_u in enumerate(prop_train_u_list):\n",
         "    print('='*3 + f'{prop_train_u = }' + '='*3)\n",
         "    selected, selected_name = select_unlabeled_in_proportion(prop_train_u, l_u_t_status, status, target=pines.target)\n",
@@ -221,15 +297,30 @@
         "        print(f'{j}:{s}:{n}')\n",
         "\n",
         "    X_train_u = pines.features[selected==2].tolist()\n",
+        "    l_train_u = pines.target[selected==2].tolist()\n",
         "\n",
-        "    ax31[i] = fig3.add_subplot(3,3,i+1)\n",
-        "    colored_map(ax31[i], pines.target[selected==2], pines.cordinates[selected==2], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
-        "    ax31[i].set_title(f'{prop_train_u =}')\n",
+        "    fig4[i] = plt.figure(figsize=(12.8,19.2), constrained_layout=True)\n",
         "\n",
+        "    ax4[3*i+0] = fig4[i].add_subplot(4,2,1)\n",
+        "    colored_map(ax4[3*i+0], pines.target[l_u_t_status==3], pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax4[3*i+0].set_title(f'labeled train area {prop_train_u =}')\n",
+        "\n",
+        "    ax4[3*i+1] = fig4[i].add_subplot(4,2,3)\n",
+        "    colored_map(ax4[3*i+1], pines.target[selected==2], pines.cordinates[selected==2], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax4[3*i+1].set_title(f'unlabeled train area {prop_train_u =}')\n",
         "\n",
         "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0.8, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
         "    clf.train()\n",
         "    preds = clf.predict(X_test)\n",
+        "\n",
+        "    ax4[3*i+2] = fig4[i].add_subplot(2,1,2)\n",
+        "    colored_map(ax4[3*i+2], preds, pines.cordinates[l_u_t_status==1], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    ax4[3*i+1].set_title(f'predicted label for test data {prop_train_u =}')\n",
+        "\n",
+        "    fig4[i].tight_layout(rect=[0,0,1,0.96])\n",
+        "    fig4name=f'exp01_fig04_{i:0d}.png'\n",
+        "    fig4[i].savefig(fig4name)\n",
+        "\n",
         "    err_ = classification_error(preds,L_test)\n",
         "    err.append(err_)\n",
         "    acc_ = accuracy_score(L_test, preds)\n",
@@ -237,29 +328,35 @@
         "    f1_ = f1_score(L_test, preds, average=\"micro\")\n",
         "    f1.append(f1_)\n",
         "\n",
-        "ax32 = fig3.add_subplot(3,3,9)\n",
-        "ax32.plot(prop_train_u_list, acc)\n",
-        "ax32.set_xlabel(r'Amount of Unlabeled Data [%%]')\n",
-        "ax32.set_ylabel(r'Accuracy Score [%%]')\n",
-        "ax32.set_title('Testing with Various Unlabeled Data Proportion')\n",
-        "fig3.savefig(\"exp01_03.png\")"
+        "    # counter\n",
+        "    t_now = perf_counter()\n",
+        "    t_lap = t_now-t_old\n",
+        "    t_ave = (t_now-t_start)/(i+1)\n",
+        "    t_rest = t_ave * (len(prop_train_l_list)-(i+1))\n",
+        "    ho,mo,so = counter2hms(t_old)\n",
+        "    hl,ml,sl = counter2hms(t_lap)\n",
+        "    hr,mr,sr = counter2hms(t_rest)\n",
+        "    print(f'lap {i+1} | {hl:2d}:{ml:2d}:{sl:2d} + {ho:2d}:{mo:2d}:{so:2d}, est {hr:2d}:{mr:2d}:{sr}')\n",
+        "    t_old = t_now\n",
+        "\n",
+        "fig5 = plt.figure()\n",
+        "ax5 = fig5.add_subplot(1,1,1)\n",
+        "ax5.plot(prop_train_u_list, acc, 'o', label='accuracy score')\n",
+        "ax5.plot(prop_train_u_list, f1, 's--', label='f1 score')\n",
+        "ax5.legend()\n",
+        "ax5.set_xlabel(r'Amount of Unlabeled Data [%%]')\n",
+        "ax5.set_ylabel(r'Accuracy Score [%%]')\n",
+        "ax5.set_title('Testing with Various Unlabeled Data Proportion')\n",
+        "fig5.tight_layout(rect=[0,0,1,0.96])\n",
+        "fig5.savefig(\"exp01_fig05.png\")"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3.10.0 ('.venv': poetry)",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.10.0"
-    },
-    "vscode": {
-      "interpreter": {
-        "hash": "59511021f2eef1b40188386727b1ef8ca44bf6349da49aa2645b7638b31840ba"
-      }
     }
   },
   "nbformat": 4,
