--- a/exp/Moh_experiment02.ipynb
+++ b/exp/Moh_experiment02.ipynb
@@ -14,7 +14,7 @@
         "lang: ja\n",
         "---"
       ],
-      "id": "bf9ccde9"
+      "id": "9af718d4"
     },
     {
       "cell_type": "markdown",
@@ -43,7 +43,7 @@
         "実験1で，密集したトレーニングデータからラベル無しデータを選んでいるのだから，ある意味空間特徴に基づいた高信頼なデータである．\n",
         "実験1で行うべきは，\\Omega - D_l　から全く無作為抽出された（実験2の「条件」のない）ラベルなしデータであるべきでは...\n"
       ],
-      "id": "7200ed12"
+      "id": "e3d0119f"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
         "\n",
         "pines = load_pines(pca=20,recategorize_rule=recategorize17to10_csv, include_background=True,gt_gic=False)"
       ],
-      "id": "e128fec1",
+      "id": "e4674589",
       "execution_count": null,
       "outputs": []
     },
@@ -68,7 +68,7 @@
         "\n",
         "トレーニングデータを @fig_train に示す．\n"
       ],
-      "id": "7809f27f"
+      "id": "cd2f4e1f"
     },
     {
       "cell_type": "code",
@@ -83,7 +83,7 @@
         "    n = status[status==i].shape[0]\n",
         "    print(f'{i}:{s}:{n}')"
       ],
-      "id": "130d1a8c",
+      "id": "dd46f221",
       "execution_count": null,
       "outputs": []
     },
@@ -93,7 +93,7 @@
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
       ],
-      "id": "fde0bb99"
+      "id": "27089027"
     },
     {
       "cell_type": "code",
@@ -138,7 +138,7 @@
         "    L_test = pines.target[l_u_t_status==1].tolist()\n",
         "\n",
         "    ax21[i] = fig2.add_subplot(3,3,i+1)\n",
-        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False)\n",
+        "    colored_map(ax21[i], L_train_l, pines.cordinates[l_u_t_status==3], recategorize_rule=recategorize17to10_csv, gt_gic=False, with_legend=False)\n",
         "    ax21[i].set_title(f'{prop_train_l =}')\n",
         "\n",
         "    clf = QN_S3VM_OVR(X_train_l, L_train_l, X_train_u, random_generator=rg, lam=0.008765625, lamU=0.8, sigma=0.5, kernel_type=\"RBF\", estimate_r=0.0)\n",
@@ -156,6 +156,7 @@
         "ax22.set_xlabel(r'Amount of Labeled Data [$\\%$]')\n",
         "ax22.set_ylabel(r'Accuracy Score[$\\%$]')\n",
         "ax22.set_title('Testing with Various Labeled Data Proportion')\n",
+        "fig2.tight_layout(rect=[0,0,1,0.96])\n",
         "fig2.savefig(\"exp02_02.png\")"
       ],
       "id": "fig_test_with_various_labeled",
@@ -170,7 +171,7 @@
         "\n",
         "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．\n"
       ],
-      "id": "3594db49"
+      "id": "0da30635"
     },
     {
       "cell_type": "code",
@@ -247,6 +248,7 @@
         "ax33.set_xlabel(r'Amount of Unlabeled Data [%%]')\n",
         "ax33.set_ylabel(r'Accuracy Score [%%]')\n",
         "ax33.set_title('Testing with Various Unlabeled Data Proportion')\n",
+        "fig3.tight_layout(rect=[0,0,1,0.96])\n",
         "fig3.savefig(\"exp02_03.png\")"
       ],
       "id": "fig_test_with_various_unlabeled",
