--- a/exp/Moh_experiment02.ipynb
+++ b/exp/Moh_experiment02.ipynb
@@ -13,8 +13,7 @@
         "  enabled: true\n",
         "lang: ja\n",
         "---"
-      ],
-      "id": "9af718d4"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -42,8 +41,7 @@
         "(むむむ．．．)\n",
         "実験1で，密集したトレーニングデータからラベル無しデータを選んでいるのだから，ある意味空間特徴に基づいた高信頼なデータである．\n",
         "実験1で行うべきは，\\Omega - D_l　から全く無作為抽出された（実験2の「条件」のない）ラベルなしデータであるべきでは...\n"
-      ],
-      "id": "e3d0119f"
+      ]
     },
     {
       "cell_type": "code",
@@ -54,7 +52,6 @@
         "\n",
         "pines = load_pines(pca=20,recategorize_rule=recategorize17to10_csv, include_background=True,gt_gic=False)"
       ],
-      "id": "e4674589",
       "execution_count": null,
       "outputs": []
     },
@@ -66,9 +63,8 @@
         "\n",
         "ここで，トレーニングデータは，無作為に選ばれたものではなく，ラベルごとに空間的に密集していることに注意されたい．これは土地被覆分類におけるアノテーションの特性を反映したものである．\n",
         "\n",
-        "トレーニングデータを @fig_train に示す．\n"
-      ],
-      "id": "cd2f4e1f"
+        "トレーニングデータを @fig_train に示す．"
+      ]
     },
     {
       "cell_type": "code",
@@ -83,7 +79,6 @@
         "    n = status[status==i].shape[0]\n",
         "    print(f'{i}:{s}:{n}')"
       ],
-      "id": "dd46f221",
       "execution_count": null,
       "outputs": []
     },
@@ -92,15 +87,14 @@
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
-      ],
-      "id": "27089027"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_labeled\n",
-        "#| fig-cap: Testing with Various Labeled Data Proportion\n",
+        "#| fig-cap: \"Testing with Various Labeled Data Proportion\"\n",
         "#| output: false\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
@@ -159,7 +153,6 @@
         "fig2.tight_layout(rect=[0,0,1,0.96])\n",
         "fig2.savefig(\"exp02_02.png\")"
       ],
-      "id": "fig_test_with_various_labeled",
       "execution_count": null,
       "outputs": []
     },
@@ -169,16 +162,15 @@
       "source": [
         "@fig_test_with_various_labeled に示すようにラベル付きデータがトレーニングデータの20%以上のときにエラー率が低くなるので，20％に固定する．\n",
         "\n",
-        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．\n"
-      ],
-      "id": "0da30635"
+        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_unlabeled\n",
-        "#| fig-cap: Testing with Various Unlabeled Data Proportion\n",
+        "#| fig-cap: \"Testing with Various Unlabeled Data Proportion\"\n",
         "#| output: false\n",
         "\n",
         "import numpy as np\n",
@@ -251,7 +243,6 @@
         "fig3.tight_layout(rect=[0,0,1,0.96])\n",
         "fig3.savefig(\"exp02_03.png\")"
       ],
-      "id": "fig_test_with_various_unlabeled",
       "execution_count": null,
       "outputs": []
     }
@@ -264,5 +255,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 5
+  "nbformat_minor": 4
 }
