--- a/exp/Moh_experiment03.ipynb
+++ b/exp/Moh_experiment03.ipynb
@@ -13,8 +13,7 @@
         "  enabled: true\n",
         "lang: ja\n",
         "---"
-      ],
-      "id": "1d6044ac"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -24,9 +23,8 @@
         "\n",
         "実験1と割合（サンプル数）は同様だが，抽出元が異なる．ラベル無しデータは無い．\n",
         "- ラベル付きデータの割合 p = 0.1*(0.1〜0.8) , D_l selected from D_0 (predefined training data: 10% of anotated)\n",
-        "- テストデータの割合 r = 0.9 , \\Omega - D_0\n"
-      ],
-      "id": "654e6f1c"
+        "- テストデータの割合 r = 0.9 , \\Omega - D_0"
+      ]
     },
     {
       "cell_type": "code",
@@ -37,7 +35,6 @@
         "\n",
         "pines = load_pines(pca=20,recategorize_rule=recategorize17to10_csv, include_background=True,gt_gic=False)"
       ],
-      "id": "6e0df955",
       "execution_count": null,
       "outputs": []
     },
@@ -54,7 +51,6 @@
         "    n = status[status==i].shape[0]\n",
         "    print(f'{i}:{s}:{n}')"
       ],
-      "id": "8717bea4",
       "execution_count": null,
       "outputs": []
     },
@@ -63,15 +59,14 @@
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
-      ],
-      "id": "1ec2f5a9"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
         "#| label: fig_test_with_various_labeled\n",
-        "#| fig-cap: Testing with Various Labeled Data Proportion\n",
+        "#| fig-cap: \"Testing with Various Labeled Data Proportion\"\n",
         "#| output: false\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
@@ -145,7 +140,6 @@
         "ax22.set_title('Testing with Various Labeled Data Proportion')\n",
         "fig2.savefig(\"exp03_02.png\")"
       ],
-      "id": "fig_test_with_various_labeled",
       "execution_count": null,
       "outputs": []
     }
@@ -158,5 +152,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 5
+  "nbformat_minor": 4
 }
