--- a/exp/Moh_experiment01.ipynb
+++ b/exp/Moh_experiment01.ipynb
@@ -2,7 +2,6 @@
   "cells": [
     {
       "cell_type": "raw",
-      "id": "e8435f5a",
       "metadata": {},
       "source": [
         "---\n",
@@ -19,12 +18,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "376deb3e",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "from indianpines.dataset import load as load_pines\n",
@@ -35,25 +29,19 @@
     },
     {
       "cell_type": "markdown",
-      "id": "af34d0a1",
       "metadata": {},
       "source": [
         "実験1では，Backgroundラベル10705インスタンスを除く10320インスタンスから，$10\\%$をトレーニングデータとして選び，それをラベル付きとラベル無しに分割する(p:1-p）．トレーニングデータ以外の$90\\%$を評価用のテストデータとする．\n",
         "\n",
         "ここで，トレーニングデータは，無作為に選ばれたものではなく，ラベルごとに空間的に密集していることに注意されたい．これは土地被覆分類におけるアノテーションの特性を反映したものである．\n",
         "\n",
-        "トレーニングデータを @fig_train に示す．\n"
+        "トレーニングデータを @fig_train に示す．"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "168005b3",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "prop_train = 1348/10320\n",
@@ -69,16 +57,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "fig_train",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "#| label: fig_train\n",
-        "#| fig-cap: Selected Training Data\n",
+        "#| fig-cap: \"Selected Training Data\"\n",
         "\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
@@ -93,12 +76,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "ae356836",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "def counter2hms(c):\n",
@@ -111,7 +89,6 @@
     },
     {
       "cell_type": "markdown",
-      "id": "a3ace9ef",
       "metadata": {},
       "source": [
         "## ラベル付きトレーニングデータの割合に対する評価\n"
@@ -120,16 +97,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "fig_test_with_various_labeled",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "#| label: fig_test_with_various_labeled\n",
-        "#| fig-cap: Testing with Various Labeled Data Proportion\n",
+        "#| fig-cap: \"Testing with Various Labeled Data Proportion\"\n",
         "#| output: true\n",
         "\n",
         "from qns3vm import QN_S3VM_OVR\n",
@@ -220,32 +192,26 @@
         "ax3.set_ylabel(r'Score[$\\%$]')\n",
         "ax3.set_title('Testing with Various Labeled Data Proportion')\n",
         "fig3.tight_layout(rect=[0,0,1,0.96])\n",
-        "fig3.savefig(\"exp01_fig03.png\")"
+        "fig3.savefig(\"exp01_03.png\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "915b795a",
       "metadata": {},
       "source": [
         "@fig_test_with_various_labeled に示すようにラベル付きデータがトレーニングデータの20%以上のときにエラー率が低くなるので，20％に固定する．\n",
         "\n",
-        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．\n"
+        "その上で，ラベル無しデータの割合を10%から10％刻みで80%まで変えてみる．結果を @fig_test_with_various_unlabeled に示す．"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "fig_test_with_various_unlabeled",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "#| label: fig_test_with_various_unlabeled\n",
-        "#| fig-cap: Testing with Various Unlabeled Data Proportion\n",
+        "#| fig-cap: \"Testing with Various Unlabeled Data Proportion\"\n",
         "#| output: true\n",
         "\n",
         "import numpy as np\n",
@@ -354,11 +320,20 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.10.0 ('.venv': poetry)",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "59511021f2eef1b40188386727b1ef8ca44bf6349da49aa2645b7638b31840ba"
+      }
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 5
+  "nbformat_minor": 4
 }
